# GraphicsDemos

./: CMakeLists.txt
demos/: CMakeLists.txt
demos/01-Simple/: Main.cpp  SimpleDemo.cpp  SimpleDemo.h
demos/02-AntiAliasingTechniques/: Main.cpp  SimpleDemo.cpp  SimpleDemo.h
dependencies/SDL/lib/windows/: SDL2.exp  SDL2main.lib
dependencies/SDL/lib/x86/: SDL2.lib
dependencies/SOIL/lib/windows/: SOILDebug.lib  SOILRelease.lib
resources/shaders/D3D11/: ColorShader.fx  TestShader.fx  UIShader.fx
resources/shaders/GL3/: ColorShader.frag  ColorShader.vert  TestShader.vert  UIShader.frag  UIShader.vert
system/: CMakeLists.txt
system/lib/: stb_image.h
system/private/: DX11Definitions.h  DX11Device.cpp  DX11Device.h  DemoSystem.cpp  GL3Definitions.h  GL3Device.cpp  GL3Device.h  Input.cpp  UIManager.cpp
system/public/: Demo.h  DemoCommon.h  DemoSystem.h  DemoTypes.h  GraphicsDefinitions.h  IGraphicsDevice.h  Input.h  InputDefinitions.h  UIManager.h
system/public/imgui/: imgui.cpp  imgui.h  stb_rect_pack.h
system/public/utility/: Bit.h  EnumFlags.h  Log.h  ResourceContainer.h  Time.h
